force-app/main/default/objects/Employee_Information__c/Employee_Information__c.object-meta.xml
<CustomObject>
    <label>Employee Information</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employee Information Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>