force-app/main/default/objects/Employee_Information__c/fields/Credentials_logged_out__c.field-meta.xml
<CustomField>
    <fullName>Credentials_logged_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credentials logged out</label>
    <type>Checkbox</type>
</CustomField>