force-app/main/default/objects/Employee_Information__c/fields/DataBase_Access__c.field-meta.xml
<CustomField>
    <fullName>DataBase_Access__c</fullName>
    <label>DataBase Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>