force-app/main/default/objects/Employee_Information__c/fields/Last_WD__c.field-meta.xml
<CustomField>
    <fullName>Last_WD__c</fullName>
    <formula>IF(
    ISPICKVAL(notice_period_12__c, &quot;&quot;),
    TODAY(),
    TODAY() + VALUE(TEXT(notice_period_12__c))
)</formula>
    <label>Last WD</label>
    <type>Date</type>
</CustomField>