force-app/main/default/objects/Employee_Information__c/fields/Last_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Working_Day__c</fullName>
    <formula>IF( 
   ISPICKVAL(notice_period_12__c, &quot;&quot;), 
   TODAY(), 
   TODAY() + VALUE(TEXT(notice_period_12__c))
)</formula>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>