force-app/main/default/objects/Employee_Information__c/fields/notice_period_12__c.field-meta.xml
<CustomField>
    <fullName>notice_period_12__c</fullName>
    <label>notice period 12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>