force-app/main/default/objects/Employee_Information__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <label>Remaining Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>