force-app/main/default/objects/Employee_Information__c/fields/Remaining_Dayss__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Dayss__c</fullName>
    <formula>IF(
    Last_Working_Day__c != null,
    Last_Working_Day__c - TODAY(),
    IF(
        ISPICKVAL(notice_period_12__c, &quot;&quot;),
        0,
        VALUE(TEXT(notice_period_12__c))
    )
)</formula>
    <label>Remaining Dayss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>