force-app/main/default/objects/Employee_Information__c/validationRules/Prevent_Edit_When_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_When_Read_Only</fullName>
    <active>false</active>
    <errorConditionFormula>Credentials_logged_out__c  = TRUE</errorConditionFormula>
    <errorMessage>This record is read-only and cannot be edited because the Employee has already left the company.</errorMessage>
</ValidationRule>