force-app/main/default/objects/Employee_Information__c/listViews/All_Employee_Information.listView-meta.xml
<ListView>
    <fullName>All_Employee_Information</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Employee Information</label>
</ListView>